WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
45373
Fix warning in rendering/RenderBlock.cpp
https://bugs.webkit.org/show_bug.cgi?id=45373
Summary
Fix warning in rendering/RenderBlock.cpp
Csaba Osztrogonác
Reported
2010-09-08 01:11:00 PDT
gcc warning introduced in
http://trac.webkit.org/changeset/66900
../../../WebCore/rendering/RenderBlock.cpp:3873: warning: suggest parentheses around && within ||
Attachments
proposed fix
(1.40 KB, patch)
2010-09-08 01:12 PDT
,
Csaba Osztrogonác
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Csaba Osztrogonác
Comment 1
2010-09-08 01:12:17 PDT
Created
attachment 66855
[details]
proposed fix
Andreas Kling
Comment 2
2010-09-08 03:37:37 PDT
Comment on
attachment 66855
[details]
proposed fix r=me
Csaba Osztrogonác
Comment 3
2010-09-08 03:48:55 PDT
Comment on
attachment 66855
[details]
proposed fix Clearing flags on attachment: 66855 Committed
r66965
: <
http://trac.webkit.org/changeset/66965
>
Csaba Osztrogonác
Comment 4
2010-09-08 03:49:03 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug