2010-09-08  Csaba Osztrogonác  <ossy@webkit.org>

Reviewed by Andreas Kling.

        Fix warning in rendering/RenderBlock.cpp.
        https://bugs.webkit.org/show_bug.cgi?id=45373

        * rendering/RenderBlock.cpp:
        (WebCore::RenderBlock::hitTestColumns): Suggested parentheses added around && within ||


Canonical link: https://commits.webkit.org/57718@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@66965 268f45cc-cd09-0410-ab3c-d52691b4dbfc